[package]
name = "rust-aleph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleph-bft = "0.20.1"
aleph-bft-types = "0.7.2"
anyhow = "1.0.66"
async-trait = "0.1.59"
clap = { version = "4.0.29", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.23.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
